# nec_contractor

./: .env.example  .gitignore  Claude.md  Dockerfile  README.md  docker-compose.yml  main.py  pyproject.toml
apps/communications/: admin.py  apps.py  forms.py  models.py  urls.py  views.py
apps/compensation_events/: admin.py  apps.py  forms.py  models.py  tasks.py  urls.py  views.py
apps/core/: admin.py  apps.py  forms.py  models.py  notifications.py  permissions.py  signals.py  urls.py  views.py
apps/early_warnings/: admin.py  apps.py  forms.py  models.py  tasks.py  urls.py  views.py
apps/financial/: admin.py  apps.py  forms.py  models.py  urls.py  views.py
apps/projects/: admin.py  apps.py  forms.py  models.py  urls.py  views.py
apps/subscriptions/: admin.py  forms.py  models.py  urls.py  utils.py  views.py
config/: __init__.py  celery.py  urls.py
config/settings/: base.py  development.py  production.py
static/css/: nec.css
templates/: base.html
templates/communications/: comm_form.html  comm_list.html
templates/compensation_events/: _ce_table.html  ce_detail.html  ce_form.html  ce_list.html
templates/core/: _role_person_row.html  _role_person_table.html  contractor_org_detail.html  contractor_org_form.html  dashboard.html  people_list.html  person_confirm_deactivate.html  person_form.html  profile.html  role_person_form.html  role_person_list.html
templates/early_warnings/: _ew_table.html  ew_detail.html  ew_form.html  ew_list.html
templates/financial/: cost_form.html  cost_list.html  payment_form.html  payment_list.html  (+1 more)
(+35 files in other folders)
